--- a/mobile.css
+++ b/mobile.css
@@ -1,9 +1,10 @@
 body {
   max-width: 500px;
+  width:100% ;
 }
 /* header */
 .container {
-  height: 200px;
+  height: 250px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -20,9 +21,11 @@ body {
   border-bottom: 1px solid gray;
   width: 80%;
 }
+.ville {
+  padding: 0;
+}
 /* paris */
 .container2 {
-  max-width: 500px;
   padding: 0;
 }
 .container2 > h1 {
@@ -36,17 +39,23 @@ body {
 /* destination */
 .titre {
   text-align: center;
+  width: 350px;
+  
   padding: 0;
   margin: 0;
+  margin-top: 50px;
+  margin-left: 10%;
 }
 .destination > img {
   width: 400px;
 }
 .container3 {
+  
   height: auto;
-  max-width: 500px;
+  
   margin: 0;
   padding: 0;
+  margin-top: 50px;
 }
 .destination {
   margin-bottom: 20px;
@@ -59,7 +68,8 @@ body {
   justify-content: center;
   align-items: center;
   height: auto;
-  max-width: 500px;
+  
+  margin-top: 50px;
 }
 .ekip > img {
   width: 500px;
@@ -67,16 +77,25 @@ body {
 }
 .text {
   width: 400px;
+  height: 700px;
   margin: 10px;
+}
+.text > h3 {
+  width: 400px;
+}
+.texte > p {
+  height: 900px;
+  width: 400px;
 }
 /* avis */
 .titre2 {
   text-align: center;
   padding: 0;
-  margin: 0;
+  margin: 10px;
+  width: 100%;
 }
 .container5 {
-  max-width: 500px;
+  
   height: auto;
 }
 .avis {
@@ -86,10 +105,20 @@ body {
   align-items: center;
   height: 550px;
 }
+.avis>p{
+  padding: 0;
+  height: 400px;
+}
 /* form */
 .container6 {
-  max-width: 500px;
+  
   height: auto;
+}
+.container6>h3{
+  font-size: 40px;
+  margin: 10px;
+  margin-bottom: 50px;
+  margin-top: 50px;
 }
 .container6 > input {
   width: 80%;
@@ -97,5 +126,5 @@ body {
 /* footer */
 .container7 {
   height: 200px;
-  max-width: 500px;
+  
 }
