--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h6 {
   flex-direction: row;
   flex-wrap: wrap;
   height: 50px;
-  justify-content: start;
+  justify-content: center;
   align-items: center;
   padding: 5px;
 }
@@ -41,7 +41,7 @@ h6 {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding-left: 15px;
+
   font-family: "LongCang", sans-serif;
 }
 .logo > svg {
@@ -51,13 +51,16 @@ h6 {
 }
 
 .logo > h4 {
-  /* font-family: "LongCang"; */
+  font-family: "LongCang";
+
   font-size: 25px;
   color: white;
 }
+
 .nav a {
   /* margin: 5px; */
   padding: 5px;
+
   color: white;
   text-decoration: none;
   width: 100px;
@@ -97,6 +100,7 @@ span {
   width: 627.5px;
   font-weight: 300;
   text-align: center;
+  text-shadow: #444444;
 }
 /* destination */
 .titre {
@@ -306,5 +310,5 @@ p {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  font-size: 10px;
+  font-size: 12.5px;
 }
