--- a/mobile.css
+++ b/mobile.css
@@ -15,6 +15,7 @@ body {
   justify-content: center;
   align-items: center;
   padding: 0px;
+  min-width: 50px;
 }
 .logo {
   margin: 10px;
@@ -88,8 +89,11 @@ body {
   margin-top: 50px;
 }
 .ekip > img {
+  max-width: 500px;
   width: 500px;
-  height: 400px;
+  min-width: 200px;
+  max-height: 400px;
+  min-height: 100px;
 }
 .text {
   display: flex;
@@ -150,4 +154,17 @@ body {
 }
 .container7 > p {
   font-size: 20px;
+}
+
+@media (max-width: 430px) {
+  html {
+    max-width: 430px;
+  }
+  body {
+    width: 430px;
+    max-width: 430px;
+  }
+  .ekip > img {
+    max-width: 430px;
+  }
 }
