--- a/mobile.css
+++ b/mobile.css
@@ -64,8 +64,9 @@ body {
   margin-top: 50px;
   margin-left: 10%;
 }
+
 .destination > img {
-  width: 400px;
+  max-width: 300px;
 }
 .container3 {
   height: auto;
@@ -76,7 +77,7 @@ body {
 }
 .destination {
   margin-bottom: 20px;
-  width: 400px;
+  max-width: 300px;
 }
 /* ekip */
 .container4 {
