--- a/mobile.css
+++ b/mobile.css
@@ -90,11 +90,11 @@ body {
   margin-top: 50px;
 }
 .ekip > img {
-  max-width: 500px;
-  width: 500px;
-  min-width: 200px;
-  max-height: 400px;
-  min-height: 100px;
+  max-width: 499px;
+  width: 499px;
+  min-width: 199px;
+  max-height: 399px;
+  min-height: 199px;
 }
 .text {
   display: flex;
@@ -118,10 +118,13 @@ body {
   text-align: center;
   padding: 0;
   margin: 10px;
-  width: 100%;
+  width: 99%;
 }
 .container5 {
   height: auto;
+}
+h3 {
+  width: 80%;
 }
 .avis {
   display: flex;
@@ -166,7 +169,7 @@ body {
     max-width: 430px;
   }
   .ekip > img {
-    max-width: 430px;
+    max-width: 429px;
   }
 }
 @media (max-width: 390px) {
@@ -178,6 +181,6 @@ body {
     max-width: 390px;
   }
   .ekip > img {
-    max-width: 390px;
+    max-width: 389px;
   }
 }
