--- a/mobile.css
+++ b/mobile.css
@@ -98,8 +98,8 @@ body {
 }
 .text {
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
   width: 500px;
   height: auto;
   margin: 0;
@@ -107,12 +107,14 @@ body {
 }
 .text > h3 {
   width: 80%;
+  padding: 0;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 .text > p {
   width: 70%;
   height: auto;
   padding: 0px;
-  padding-left: 10px;
 }
 /* avis */
 .titre2 {
